deployment/kustomize/base/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    app: zah-app
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: postgres-db
  template:
    metadata:
      labels:
        deployment: postgres-db
        app: zah-app
    spec:
      containers:
        - name: postgres-container
          image: postgres
          resources:
            limits:
              memory: 4Gi
              cpu: "2"
          ports:
            - containerPort: 5432
