deployment/kustomize/base/deployment.app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: zah-sampleapp
  name: sampleapp-deployment
  namespace: zah-sampleapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zah-sampleapp
  template:
    metadata:
      labels:
        app: zah-sampleapp
    spec:
      containers:
        - command:
            - python
            - manage.py
            - runserver
            - '0.0.0.0:8000'
          image: 'minerva45/sampleapp:main'
          name: zah-sampleapp
          ports:
            - containerPort: 8000
