deployment/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zah-sampleapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zah-sampleapp
  template:
    metadata:
      labels:
        app: zah-sampleapp
    spec:
      containers:
        - name: zah-sampleapp
          image: minerva45/sampleapp:latest
          ports:
            - containerPort: 8000
          command: 
            - runserver
