deployment/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zah-final-task-service
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: zah-devops-final-task
  type: NodePort
